--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.0",
     "astro": "^5.6.1",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
     "nodemailer": "^6.10.0",
