--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "astro dev",
     "build": "astro build && node copy-images.js",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "init-db": "node src/db/init.js",
+    "start": "node ./dist/server/entry.mjs"
   },
   "dependencies": {
     "@astrojs/netlify": "^6.2.5",
+    "@astrojs/node": "^8.2.0",
     "@astrojs/react": "^4.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -19,11 +22,15 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "astro": "^5.6.1",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "nodemailer": "^6.10.0",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
