--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build && node copy-images.js",
+    "build": "astro build && node copy-images.js && node init-db-build.js",
     "preview": "astro preview",
     "astro": "astro",
     "init-db": "node src/db/init.js",
@@ -30,7 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "nodemailer": "^6.10.0",
-    "pg": "^8.11.3",
+    "pg": "^8.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
