--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build && node copy-images.js && node init-db-build.js",
+    "build": "astro build && node copy-images.js",
     "preview": "astro preview",
     "astro": "astro",
-    "init-db": "node src/db/init.js",
-    "start": "node ./dist/server/entry.mjs"
+    "init-db": "node src/db/init.js"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.2.5",
-    "@astrojs/node": "^8.2.0",
-    "@astrojs/react": "^4.2.3",
+    "@astrojs/netlify": "^4.0.1",
+    "@astrojs/react": "^3.0.10",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -21,7 +19,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "astro": "^5.6.1",
+    "astro": "^4.2.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
@@ -38,7 +36,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
