--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,9 @@
 [[edge_functions]]
   function = "entry"
   path = "/*"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/api/:splat"
+  status = 200
+  force = true
